<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/shouye_taocanlv"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/zhuce_et_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/taocan_lv_taocantv_chu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:gravity="right"
                android:textColor="@color/zhuce_et_background"
                android:layout_weight="1"
                android:text="@string/taocan_lv_taocantv_flag" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textSize="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/zheci_backgournd"
                android:text="@string/taocan_lv_taocantv_money" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textColor="@color/zhuce_et_background"
                android:layout_weight="1"
                android:text="@string/taocan_lv_taocantv_day" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/shouye_taocanlvtv"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:src="@drawable/planlistcontain" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/taocan_lv_hintone"
                android:textColor="@color/zhuce_taocanivim"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:src="@drawable/planlistcontain" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/taocan_lv_hinttwo"
                android:textColor="@color/zhuce_taocanivim"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:src="@drawable/planlistcontain" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/taocan_lv_hintthree"
                android:textColor="@color/zhuce_taocanivim"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:src="@drawable/planlistcontain" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/taocan_lv_hintfour"
                android:textColor="@color/zhuce_taocanivim"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:src="@drawable/planlistnotcontain" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/taocan_lv_hintfive"
                android:textColor="@color/zhuce_taocanivim"
                android:textSize="20dp" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/click_btn_green_round"
            android:text="@string/taocan_lv_buy" />


    </LinearLayout>

</LinearLayout>
