<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.jianghuo.Shouye_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/home_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/shouye_background"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/shouye_background"
            android:gravity="center">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_country"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shouye_xianlu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/shouye_xianluzhi"
                    android:textColor="@color/zhuce_tv"
                    android:textSize="20dp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/general_divider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shouye_taocan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/shouye_taocanzhi"
                    android:textColor="@color/zhuce_tv"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>

        <View style="@style/VerticalDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/homepagelink" />

        </LinearLayout>


    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/nav_backgroud"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />
</android.support.v4.widget.DrawerLayout>
